# picAItionary

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
.cursor/rules/: picaitionary.mdc
backend/: Dockerfile  README.md  alembic.ini  clues.csv  image_analysis.py  main.py  models.py  package.json  requirements.txt  security.py  test_api.py
backend-v2/: .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend-v2/app/: __init__.py  main.py
backend-v2/app/api/: endpoints.py
backend-v2/app/config/: settings.py
backend-v2/app/core/: __init__.py  ai_interface.py
backend-v2/app/models/: __init__.py  database.py
backend-v2/app/schemas/: requests.py  responses.py
backend-v2/app/services/: __init__.py  ai_providers.py  deck_service.py  metrics_service.py  prompt_manager.py
backend-v2/scripts/: clear_decks.py  deploy.sh  health-check.sh  seed_decks.py
backend/alembic/: env.py
backend/data/: game.db
backend/scripts/: backfill_ai_models.py  fix_scores.py  init_db.py  test_image_analysis.py
backend/src/: __main__.py
backend/tests/: __init__.py  test_api_endpoints.py  test_image_analysis_unit.py  test_scoring.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/scripts/: generate-icon.js
src/: App.tsx  types.ts
unityClient/: .gitignore  ARCHITECTURE.md  CLAUDE.md  DRAWING_SETUP.md  MIGRATION_GUIDE.md  NETWORKING_SETUP.md  UNITY_BUTTON_SETUP.md  UNITY_SETUP_GUIDE.md
(+83 files in other folders)
