[project]
name = "picaictionary-backend-v2"
version = "0.1.0"
description = "PicAictionary Backend V2 - Modular AI Game Backend"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "supabase>=2.3.0",
    "psycopg2-binary>=2.9.9",
    "openai>=1.12.0",
    "anthropic>=0.21.0",
    "httpx>=0.27.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.0.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true